fixed the words

--- a/clojure-102.org
+++ b/clojure-102.org
@@ -898,10 +898,10 @@ user=> (sorted-set 4 3 2 1)
 #{1 2 3 4}
 #+END_SRC
 
-*** 在集合中加或移除元素
+*** 在集合中增加或移除元素
 #+NAME:
 #+BEGIN_SRC
-; 加
+; 增加
 user=> (conj #{1 2 3} 4)
 #{1 4 3 2}
 user=> (conj #{1 2 3} 4 5)
